--- a/CoronaManagementSystem/appsettings.json
+++ b/CoronaManagementSystem/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default":"data source=NOACOMPUTER;initial catalog=Covid19 management system;integrated security=True;TrustServerCertificate=True; MultipleActiveResultSets=True"
+    "Default":"data source=NOACOMPUTER\\SQLEXPRESS ;initial catalog=Covid-19 management system;integrated security=True;TrustServerCertificate=True; MultipleActiveResultSets=True"
   }
 
 }
